--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "type": "lldb",
             "request": "launch",
@@ -19,7 +20,25 @@
                     "kind": "bin"
                 }
             },
-            "args": ["generate", "--name", "testkey", "--path", "/home/agrinman/.ssh/id_testkey"],
+            "args": ["generate", "--name", "testkey"],
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "kr pair",
+            "cargo": {
+                "args": [
+                    "build",
+                    "--bin=kr",
+                    "--package=kr"
+                ],
+                "filter": {
+                    "name": "kr",
+                    "kind": "bin"
+                }
+            },
+            "args": ["pair"],
             "cwd": "${workspaceFolder}"
         },
         {
