--- a/crates/kr/Cargo.toml
+++ b/crates/kr/Cargo.toml
@@ -34,3 +34,4 @@ qr2term = "0.2.1"
 eagre-asn1 = "0.3.0"
 reqwest = { version = "0.11.0", features = ["json"] }
 askama = "0.10.5"
+notify-rust = "4.5.2"
