--- a/crates/kr/Cargo.toml
+++ b/crates/kr/Cargo.toml
@@ -35,3 +35,6 @@ eagre-asn1 = "0.3.0"
 reqwest = { version = "0.11.0", features = ["json"] }
 askama = "0.10.5"
 notify-rust = "4.5.2"
+
+[target.'cfg(target_os="macos")'.dependencies]
+mac-notification-sys = "0.3.0"
