--- a/crates/kr/Cargo.toml
+++ b/crates/kr/Cargo.toml
@@ -25,9 +25,9 @@ directories = "3.0.1"
 serde_bytes =  "0.11.5"
 thiserror = "1.0"
 rusoto = "0.24"
-rusoto_core = "0.46.0"
-rusoto_sqs = "0.46.0"
-rusoto_sns = "0.46.0"
+rusoto_core = { version = "0.46.0", default_features = false, features = ["rustls"] }
+rusoto_sqs = { version = "0.46.0", default_features = false, features = ["rustls"] }
+rusoto_sns = { version = "0.46.0", default_features = false, features = ["rustls"] }
 futures = "0.3"
 chrono = "0.4.19"
 uuid = { version = "0.8", features = ["serde", "v4"] }
@@ -36,7 +36,7 @@ byteorder = "1.3.4"
 whoami = "1.0.0"
 qr2term = "0.2.1"
 eagre-asn1 = "0.3.0"
-reqwest = { version = "0.11.0", features = ["json"] }
+reqwest = { version = "0.11.0", default_features = false, features = ["json", "rustls-tls"] }
 askama = "0.10.5"
 notify-rust = "4.5.2"
 
