--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,6 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
         {
             "type": "lldb",
             "request": "launch",
@@ -20,7 +19,11 @@
                     "kind": "bin"
                 }
             },
-            "args": ["generate", "--name", "testkey"],
+            "args": [
+                "generate",
+                "--name",
+                "testkey"
+            ],
             "cwd": "${workspaceFolder}"
         },
         {
@@ -38,7 +41,49 @@
                     "kind": "bin"
                 }
             },
-            "args": ["pair"],
+            "args": [
+                "pair"
+            ],
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "akr load",
+            "cargo": {
+                "args": [
+                    "build",
+                    "--bin=akr",
+                    "--package=akr"
+                ],
+                "filter": {
+                    "name": "akr",
+                    "kind": "bin"
+                }
+            },
+            "args": [
+                "load"
+            ],
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "akr unpair",
+            "cargo": {
+                "args": [
+                    "build",
+                    "--bin=akr",
+                    "--package=akr"
+                ],
+                "filter": {
+                    "name": "akr",
+                    "kind": "bin"
+                }
+            },
+            "args": [
+                "unpair"
+            ],
             "cwd": "${workspaceFolder}"
         },
         {
@@ -56,7 +101,9 @@
                     "kind": "bin"
                 }
             },
-            "args": ["setup"],
+            "args": [
+                "setup"
+            ],
             "cwd": "${workspaceFolder}"
         },
         {
@@ -67,14 +114,36 @@
                 "args": [
                     "build",
                     "--bin=akr",
-                    "--package=kr"
+                    "--package=akr"
                 ],
                 "filter": {
                     "name": "akr",
                     "kind": "bin"
                 }
             },
-            "args": ["start"],
+            "args": [
+                "start"
+            ],
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "akr check",
+            "cargo": {
+                "args": [
+                    "build",
+                    "--bin=akr",
+                    "--package=akr"
+                ],
+                "filter": {
+                    "name": "akr",
+                    "kind": "bin"
+                }
+            },
+            "args": [
+                "check"
+            ],
             "cwd": "${workspaceFolder}"
         },
         {
