--- a/crates/kr/Cargo.toml
+++ b/crates/kr/Cargo.toml
@@ -22,7 +22,6 @@ serde_json = "1.0"
 async-trait = "0.1.42"
 base64 = "0.13.0"
 base64-serde = "0.6.1"
-directories = "3.0.1"
 serde_bytes =  "0.11.5"
 thiserror = "1.0"
 rusoto = "0.24"
@@ -41,6 +40,10 @@ reqwest = { version = "0.11.0", default_features = false, features = ["json", "r
 askama = "0.10.5"
 notify-rust = "4.5.2"
 run_script = "0.8.0"
+ansi_term = "0.12.1"
+directories = "3.0.2"
+dirs = "3.0.2"
+serde-xml-rs = "0.5.0"
 
 [target.'cfg(target_os="macos")'.dependencies]
 mac-notification-sys = "0.3.0"
