--- a/.github/workflows/pkg.yml
+++ b/.github/workflows/pkg.yml
@@ -142,17 +142,18 @@ jobs:
     steps:
       name: upload deb package
       uses: actions/github-script@v1
+      env:
+        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
       with: 
         args: gh release upload ${{ github.event.inputs.versionString }} ./akr-deb/akr_${{ github.event.inputs.versionString }}_amd64.deb
-      # env:
-      #   GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-
+    
       name: upload rpm package  
       uses: actions/github-script@v1
+      env:
+        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
       with: 
         args: gh release upload ${{ github.event.inputs.versionString }} ./akr-rpm/akr-${{ github.event.inputs.versionString}}-1.x86_64.rpm
-      # env:
-      #   GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      
   # update_release:
   #   needs: [deb, rpm]
   #   runs-on: ubuntu-20.04
