--- a/.github/workflows/pkg.yml
+++ b/.github/workflows/pkg.yml
@@ -144,17 +144,16 @@ jobs:
       uses: actions/github-script@v1
       with: 
         github-token: ${{secrets.GITHUB_TOKEN}}
-        script: |
+        args: gh release upload 1.5 target/
         # gh release upload ${{ github.event.inputs.versionString }} ./akr-deb/akr_${{ github.event.inputs.versionString }}_amd64.deb
-        gh release upload 1.5 target/
     
       name: upload rpm package  
       uses: actions/github-script@v1
       with: 
         github-token: ${{secrets.GITHUB_TOKEN}}
-        script: |
+        args: gh release upload 1.5 target/
         # gh release upload ${{ github.event.inputs.versionString }} ./akr-rpm/akr-${{ github.event.inputs.versionString}}-1.x86_64.rpm
-        gh release upload 1.5 target/
+        
       
   # update_release:
   #   needs: [deb, rpm]
