--- a/.github/workflows/pkg.yml
+++ b/.github/workflows/pkg.yml
@@ -1,11 +1,11 @@
 name: Packaging
 
-on: 
+on:
   workflow_dispatch:
     inputs:
       versionString:
-        description: 'The version semver string like 0.1.14'     
-        required: true  
+        description: "The version semver string like 0.1.14"
+        required: true
 
 jobs:
   deb:
@@ -140,21 +140,25 @@ jobs:
     needs: [deb, rpm]
     runs-on: ubuntu-20.04
     steps:
-      name: upload deb package
-      uses: actions/github-script@v1
-      with: 
-        github-token: ${{secrets.GITHUB_TOKEN}}
-        args: gh release upload 1.5 target/
-        # gh release upload ${{ github.event.inputs.versionString }} ./akr-deb/akr_${{ github.event.inputs.versionString }}_amd64.deb
-    
-      name: upload rpm package  
-      uses: actions/github-script@v1
-      with: 
-        github-token: ${{secrets.GITHUB_TOKEN}}
-        args: gh release upload 1.5 target/
-        # gh release upload ${{ github.event.inputs.versionString }} ./akr-rpm/akr-${{ github.event.inputs.versionString}}-1.x86_64.rpm
-        
-      
+      - name: upload binary (ubuntu only)
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh release upload "1.5" "target"
+      # name: upload deb package
+      # uses: actions/github-script@v1
+      # with:
+      #   github-token: ${{secrets.GITHUB_TOKEN}}
+      #   args: gh release upload 1.5 target/
+      #   # gh release upload ${{ github.event.inputs.versionString }} ./akr-deb/akr_${{ github.event.inputs.versionString }}_amd64.deb
+
+      # name: upload rpm package
+      # uses: actions/github-script@v1
+      # with:
+      #   github-token: ${{secrets.GITHUB_TOKEN}}
+      #   args: gh release upload 1.5 target/
+      #   # gh release upload ${{ github.event.inputs.versionString }} ./akr-rpm/akr-${{ github.event.inputs.versionString}}-1.x86_64.rpm
+
   # update_release:
   #   needs: [deb, rpm]
   #   runs-on: ubuntu-20.04
