update image name for centos 9

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,10 @@
 name: Build
 
 on:
-  pull_request:
-    branches:
-      - "**"
+
   push:
     branches:
-      - "**"
+      - "feature/*"
 
 jobs:
   deb:
