--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -129,5 +129,5 @@ jobs:
       - name: Upload RPM
         uses: actions/upload-artifact@v2
         with:
-          name: if matrix.image == 'centos:7' then akr-rpm-centos-7 else akr-rpm-centos-9-stream
+          name: akr-rpm-${{ matrix.image == 'centos:7' && 'centos-7' || 'centos-9-stream' }}
           path: target/generate-rpm/*.rpm
