--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,49 @@ members = [
     "crates/kr",
     "crates/ssh-agent"
 ]
+
+[workspace.dependencies]
+clap = "3.0.0-beta.2"
+tokio = { version = "1.16.1", features = ["full"] }
+ssh_agent = { path = "../ssh-agent" }
+sodiumoxide = "0.2.6"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+async-trait = "0.1.42"
+base64 = "0.13.0"
+base64-serde = "0.6.1"
+serde_bytes = "0.11.5"
+thiserror = "1.0"
+rusoto = "0.24"
+rusoto_core = { version = "0.46.0", default_features = false, features = ["rustls"] }
+rusoto_sqs = { version = "0.46.0", default_features = false, features = ["rustls"] }
+rusoto_sns = { version = "0.46.0", default_features = false, features = ["rustls"] }
+futures = "0.3"
+chrono = "0.4.19"
+uuid = { version = "0.8", features = ["serde", "v4"] }
+env_logger = "0.8.2"
+log = "0.3.8"
+byteorder = "1.3.4"
+whoami = "1.0.0"
+qr2term = "0.2.1"
+eagre-asn1 = "0.3.0"
+reqwest = { version = "0.11.16", default_features = false, features = ["json", "rustls-tls"] }
+askama = "0.10.5"
+notify-rust = "4.5.2"
+run_script = "0.8.0"
+ansi_term = "0.12.1"
+directories = "5.0.0"
+dirs = "5.0.0"
+serde-xml-rs = "0.5.0"
+urlencoding = "2.1.0"
+nix = "0.22.1"
+openssl = "0.10.48"
+bitflags = "1"
+ecdsa = "0.13.4"
+ring = "0.16.20"
+untrusted = "0.9.0"
+pem = "2.0.0"
+osshkeys = "0.6.0"
+
+# macOS
+mac-notification-sys = "0.3.0"
