--- a/crates/kr/Cargo.toml
+++ b/crates/kr/Cargo.toml
@@ -3,7 +3,7 @@ name = "akr"
 description = "Akamai MFA Developer CLI and SSH Agent"
 version = "1.1.2"
 authors = ["Alex Grinman <agrinman@akamai.com>"]
-edition = "2018"
+edition = "2021"
 license = "All Rights Reserved, Akamai Technologies"
 
 [[bin]]
@@ -13,52 +13,53 @@ path = "src/main.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = "3.0.0-beta.2"
-tokio = { version = "1.16.1", features = ["full"] }
+clap.workspace = true
+tokio.workspace = true
 ssh_agent = { path = "../ssh-agent" }
-sodiumoxide = "0.2.6"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-async-trait = "0.1.42"
-base64 = "0.13.0"
-base64-serde = "0.6.1"
-serde_bytes =  "0.11.5"
-thiserror = "1.0"
-rusoto = "0.24"
-rusoto_core = { version = "0.46.0", default_features = false, features = ["rustls"] }
-rusoto_sqs = { version = "0.46.0", default_features = false, features = ["rustls"] }
-rusoto_sns = { version = "0.46.0", default_features = false, features = ["rustls"] }
-futures = "0.3"
-chrono = "0.4.19"
-uuid = { version = "0.8", features = ["serde", "v4"] }
-env_logger = "0.8.2"
-byteorder = "1.3.4"
-whoami = "1.0.0"
-qr2term = "0.2.1"
-eagre-asn1 = "0.3.0"
-reqwest = { version = "0.11.16", default_features = false, features = ["json", "rustls-tls"] }
-askama = "0.10.5"
-notify-rust = "4.5.2"
-run_script = "0.8.0"
-ansi_term = "0.12.1"
-directories = "5.0.0"
-dirs = "5.0.0"
-serde-xml-rs = "0.5.0"
-urlencoding = "2.1.0"
-nix = "0.22.1"
-openssl = "0.10.48"
-bitflags = "1"
-ecdsa = "0.13.4"
-ring = "0.16.20"
-untrusted = "0.9.0"
-pem = "2.0.0"
-osshkeys = "0.6.0"
+sodiumoxide.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+async-trait.workspace = true
+base64.workspace = true
+base64-serde.workspace = true
+serde_bytes.workspace = true
+thiserror.workspace = true
+rusoto.workspace = true
+rusoto_core.workspace = true
+rusoto_sqs.workspace = true
+rusoto_sns.workspace = true
+futures.workspace = true
+chrono.workspace = true
+uuid.workspace = true
+env_logger.workspace = true
+byteorder.workspace = true
+whoami.workspace = true
+qr2term.workspace = true
+eagre-asn1.workspace = true
+reqwest.workspace = true
+askama.workspace = true
+notify-rust.workspace = true
+run_script.workspace = true
+ansi_term.workspace = true
+directories.workspace = true
+dirs.workspace = true
+serde-xml-rs.workspace = true
+urlencoding.workspace = true
+nix.workspace = true
+openssl.workspace = true
+bitflags.workspace = true
+ecdsa.workspace = true
+ring.workspace = true
+untrusted.workspace = true
+pem.workspace = true
+osshkeys.workspace = true
+
 [target.'cfg(target_os="macos")'.dependencies]
-mac-notification-sys = "0.3.0"
+mac-notification-sys.workspace = true
 
 [package.metadata.generate-rpm]
 assets = [
-        { source = "target/release/akr", dest = "/usr/bin/akr", mode = "0755" },
+    { source = "target/release/akr", dest = "/usr/bin/akr", mode = "0755" },
 ]
 
 [package.metadata.deb]
