--- a/.github/workflows/pkg.yml
+++ b/.github/workflows/pkg.yml
@@ -24,8 +24,9 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install pkg-config libssl-dev lintian  libpqxx-dev libxmlsec1-dev libclang-9-dev
-      - name: Setup Rust
-        uses: actions-rs/toolchain@v1.0.6
+
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1.0.7
         with:
           profile: minimal
           toolchain: stable
@@ -89,8 +90,8 @@ jobs:
           yum update -y && yum install -y epel-release && yum install -y gcc make cmake3 gcc-c++ openssl-devel gzip rpmlint
           ln -s /usr/bin/cmake3 /usr/bin/cmake
 
-      - name: Setup Rust
-        uses: actions-rs/toolchain@v1.0.6
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1.0.7
         with:
           profile: minimal
           toolchain: stable
