--- a/.github/workflows/brew_bottle.yml
+++ b/.github/workflows/brew_bottle.yml
@@ -12,13 +12,17 @@ on:
 jobs:
   build:
     runs-on: macos-latest
-      
+
     steps:
       - uses: actions/checkout@v3.5.1
-      - name: rust-toolchain
-        uses: actions-rs/toolchain@v1.0.6
+
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1.0.7
         with:
-          toolchain: 1.53
+          profile: minimal
+          toolchain: stable
+          override: true
+
       - name: bottle
         run: ./brew_bottle.sh ${{ github.event.inputs.versionString }}
         env:
