--- a/.github/workflows/pkg.yml
+++ b/.github/workflows/pkg.yml
@@ -24,8 +24,9 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install pkg-config libssl-dev lintian  libpqxx-dev libxmlsec1-dev libclang-9-dev
-      - name: Setup Rust
-        uses: actions-rs/toolchain@v1
+
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1.0.7
         with:
           profile: minimal
           toolchain: stable
@@ -36,18 +37,18 @@ jobs:
         uses: actions/checkout@v3.5.1
 
       - name: Restore cache
-        uses: Swatinem/rust-cache@v1
+        uses: Swatinem/rust-cache@v2.2.1
         with:
           key: ${{ matrix.target }}
 
       - name: Install Cargo Deb
-        uses: actions-rs/cargo@v1
+        uses: actions-rs/cargo@v1.0.3
         with:
           command: install
           args: cargo-deb --vers=${{ env.CARGO_DEB_VER }} --locked
 
       - name: Create package
-        uses: actions-rs/cargo@v1
+        uses: actions-rs/cargo@v1.0.3
         with:
           command: deb
           args: -p akr --target=${{ matrix.target }}
@@ -62,7 +63,7 @@ jobs:
         with:
           github_token: ${{ github.token }}
       - name: Upload deb asset to release
-        uses: actions/upload-release-asset@v1
+        uses: actions/upload-release-asset@v3.1.2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
@@ -89,8 +90,8 @@ jobs:
           yum update -y && yum install -y epel-release && yum install -y gcc make cmake3 gcc-c++ openssl-devel gzip rpmlint
           ln -s /usr/bin/cmake3 /usr/bin/cmake
 
-      - name: Setup Rust
-        uses: actions-rs/toolchain@v1
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1.0.7
         with:
           profile: minimal
           toolchain: stable
@@ -100,7 +101,7 @@ jobs:
         uses: actions/checkout@v3.5.1
 
       - name: Restore cache
-        uses: Swatinem/rust-cache@v1
+        uses: Swatinem/rust-cache@v2.2.1
         with:
           key: ${{ matrix.image }}
 
@@ -108,13 +109,13 @@ jobs:
         run: rm -f target/generate-rpm/*.rpm
 
       - name: Install Cargo Generate RPM
-        uses: actions-rs/cargo@v1
+        uses: actions-rs/cargo@v1.0.3
         with:
           command: install
           args: cargo-generate-rpm --vers=${{ env.CARGO_GENERATE_RPM_VER }} --locked
 
       - name: Build binary
-        uses: actions-rs/cargo@v1
+        uses: actions-rs/cargo@v1.0.3
         with:
           command: build
           args: --release
@@ -130,7 +131,7 @@ jobs:
         run: dist=$(rpm --eval %{?dist}); sed -i -e 's/release = "\(.*\)"/release = "\1'$dist'"/g' Cargo.toml
 
       - name: Create package
-        uses: actions-rs/cargo@v1
+        uses: actions-rs/cargo@v1.0.3
         with:
           command: generate-rpm
           args: -p crates/kr ${{ env.CENTOS_BUILD_FLAGS }}
@@ -145,7 +146,7 @@ jobs:
         with:
           github_token: ${{ github.token }}
       - name: Upload rpm asset to release
-        uses: actions/upload-release-asset@v1
+        uses: actions/upload-release-asset@v3.1.2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
