--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,7 @@ updates:
       interval: "daily"
       time: "20:00"
       timezone: "America/New_York"
+    open-pull-requests-limit: 10
 
   - package-ecosystem: "cargo"
     directory: "/"
@@ -15,3 +16,4 @@ updates:
       interval: "daily"
       time: "20:00"
       timezone: "America/New_York"
+    open-pull-requests-limit: 10
