--- a/.github/workflows/pkg.yml
+++ b/.github/workflows/pkg.yml
@@ -1,11 +1,9 @@
 name: Packaging
 
 on:
-  workflow_dispatch:
-    inputs:
-      versionString:
-        description: "The version semver string like 0.1.14"
-        required: true
+  release:
+    types:
+      - created
 
 jobs:
   deb:
@@ -26,48 +24,35 @@ jobs:
           sudo apt-get install pkg-config libssl-dev lintian  libpqxx-dev libxmlsec1-dev libclang-dev
 
       - name: Checkout
-        uses: actions/checkout@v4.2.2
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
       - name: Get Rust toolchain channel
         run: |
           echo "RUST_CHANNEL=$(sed -nrE 's/^channel = "(.*)"$/\1/p' "$GITHUB_WORKSPACE"/rust-toolchain.toml)" >> $GITHUB_ENV
 
       - name: Install Rust ${{ env.RUST_CHANNEL }}
-        uses: dtolnay/rust-toolchain@master
+        uses: dtolnay/rust-toolchain@888c2e1ea69ab0d4330cbf0af1ecc7b68f368cc1 # v1
         with:
           toolchain: ${{ env.RUST_CHANNEL }}
           targets: ${{ matrix.target }}
 
       - name: Install Cargo Deb
-        uses: actions-rs/cargo@v1.0.3
-        with:
-          command: install
-          args: cargo-deb --vers=${{ env.CARGO_DEB_VER }} --locked
+        run: cargo install cargo-deb --vers=${{ env.CARGO_DEB_VER }} --locked
 
       - name: Create package
-        uses: actions-rs/cargo@v1.0.3
-        with:
-          command: deb
-          args: -p akr --target=${{ matrix.target }}
+        run: cargo deb -p akr --target=${{ matrix.target }}
 
       - name: Verify package
         run: |
           # do not use exit codes while errors occured
           lintian -v target/${{ matrix.target }}/debian/*.deb || true
-      - name: Fetch latest release
-        id: fetch-latest-release
-        uses: thebritican/fetch-latest-release@v2.0.0
-        with:
-          github_token: ${{ github.token }}
+
       - name: Upload deb asset to release
-        uses: actions/upload-release-asset@v3.1.2
+        if: ${{ github.event.release.upload_url }}
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.fetch-latest-release.outputs.upload_url }}
-          asset_path: target/${{ matrix.target }}/debian/akr_${{ github.event.inputs.versionString }}_amd64.deb
-          asset_name: "akr_${{github.event.inputs.versionString}}_amd64.deb"
-          asset_content_type: application/vnd.debian.binary-package
+          GH_TOKEN: ${{ github.token }}
+          VERSION: ${{ github.event.release.tag_name }}
+        run: gh release upload $VERSION target/${{ matrix.target }}/debian/akr_$VERSION_amd64.deb
 
   rpm:
     name: RPM package
@@ -88,10 +73,10 @@ jobs:
           ln -s /usr/bin/cmake3 /usr/bin/cmake
 
       - name: Checkout
-        uses: actions/checkout@v4.2.2
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
       - name: Install Rust ${{ env.RUST_CHANNEL }}
-        uses: dtolnay/rust-toolchain@master
+        uses: dtolnay/rust-toolchain@888c2e1ea69ab0d4330cbf0af1ecc7b68f368cc1 # v1
         with:
           toolchain: ${{ env.RUST_CHANNEL }}
 
@@ -99,16 +84,10 @@ jobs:
         run: rm -f target/generate-rpm/*.rpm
 
       - name: Install Cargo Generate RPM
-        uses: actions-rs/cargo@v1.0.3
-        with:
-          command: install
-          args: cargo-generate-rpm --vers=${{ env.CARGO_GENERATE_RPM_VER }} --locked
+        run: cargo install cargo-generate-rpm --vers=${{ env.CARGO_GENERATE_RPM_VER }} --locked
 
       - name: Build binary
-        uses: actions-rs/cargo@v1.0.3
-        with:
-          command: build
-          args: --release
+        run: cargo build --release
 
       - name: Remove all symbol and relocation information
         run: strip -s target/release/akr
@@ -117,26 +96,19 @@ jobs:
         run: dist=$(rpm --eval %{?dist}); sed -i -e 's/release = "\(.*\)"/release = "\1'$dist'"/g' Cargo.toml
 
       - name: Create package
-        uses: actions-rs/cargo@v1.0.3
-        with:
-          command: generate-rpm
-          args: -p crates/kr ${{ env.CENTOS_BUILD_FLAGS }}
+        run: cargo generate-rpm -p crates/kr ${{ env.CENTOS_BUILD_FLAGS }}
 
       - name: Verify package
         run: |
           # do not use exit codes while errors occured
           rpmlint target/generate-rpm/akr-*.rpm || true
-      - name: Fetch latest release
-        id: fetch-latest-release
-        uses: thebritican/fetch-latest-release@v2.0.0
-        with:
-          github_token: ${{ github.token }}
+
       - name: Upload rpm asset to release
-        uses: actions/upload-release-asset@v3.1.2
+        if: ${{ github.event.release.upload_url }}
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.fetch-latest-release.outputs.upload_url }}
-          asset_path: target/generate-rpm/akr-${{ github.event.inputs.versionString}}-1.x86_64.rpm
-          asset_name: "akr_${{github.event.inputs.versionString}}-${{ matrix.image == 'alvistack/centos-9-stream' && 'centos-9-stream' || 'unknown' }}.rpm"
-          asset_content_type: application/octet-stream
+          GH_TOKEN: ${{ github.token }}
+          IMAGE: ${{ matrix.image == 'alvistack/centos-9-stream' && 'centos-9-stream' || 'unknown' }}
+          VERSION: ${{ github.event.release.tag_name }}
+        run: |
+          cp target/generate-rpm/akr-$VERSION-1.x86_64.rpm akr_$VERSION-$IMAGE.rpm
+          gh release upload $VERSION akr_$VERSION-$IMAGE.rpm
