--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,7 +69,7 @@ jobs:
 
     steps:
       - name: Install libs on CentOS
-        if: startsWith(matrix.image, 'centos')
+        if: ${{ startsWith(matrix.image, 'centos') }}
         run: |
           yum update -y && yum install -y epel-release && yum install -y gcc make cmake3 gcc-c++ openssl-devel gzip rpmlint
           ln -s /usr/bin/cmake3 /usr/bin/cmake
