--- a/.github/workflows/pkg.yml
+++ b/.github/workflows/pkg.yml
@@ -12,10 +12,7 @@ jobs:
       CARGO_DEB_VER: 1.38.2
       DEBIAN_FRONTEND: noninteractive
       PKG_CONFIG_ALLOW_CROSS: 1
-    strategy:
-      matrix:
-        target:
-          - "x86_64-unknown-linux-gnu"
+      TARGET: "x86_64-unknown-linux-gnu"
     runs-on: ubuntu-22.04
     steps:
       - name: Install common libs
@@ -34,46 +31,43 @@ jobs:
         uses: dtolnay/rust-toolchain@888c2e1ea69ab0d4330cbf0af1ecc7b68f368cc1 # v1
         with:
           toolchain: ${{ env.RUST_CHANNEL }}
-          targets: ${{ matrix.target }}
+          targets: ${{ env.TARGET }}
 
       - name: Install Cargo Deb
         run: cargo install cargo-deb --vers=${{ env.CARGO_DEB_VER }} --locked
 
       - name: Create package
-        run: cargo deb -p akr --target=${{ matrix.target }}
+        run: cargo deb -p akr --target=${{ env.TARGET }} -o akr_amd64.deb
 
       - name: Verify package
         run: |
           # do not use exit codes while errors occured
-          lintian -v target/${{ matrix.target }}/debian/*.deb || true
+          lintian -v target/${{ env.TARGET }}/debian/*.deb || true
 
       - name: Upload deb asset to release
         if: ${{ github.event.release.upload_url }}
         env:
           GH_TOKEN: ${{ github.token }}
           VERSION: ${{ github.event.release.tag_name }}
-        run: gh release upload $VERSION target/${{ matrix.target }}/debian/akr_$VERSION_amd64.deb
+        run: |
+          cp target/${{ env.TARGET }}/debian/akr_amd64.deb akr_$VERSION_amd64.deb
+          gh release upload $VERSION akr_$VERSION_amd64.deb
 
   rpm:
     name: RPM package
     env:
       CARGO_GENERATE_RPM_VER: 0.7.0
-    strategy:
-      matrix:
-        image:
-          - "alvistack/centos-9-stream"
+      IMAGE: "alvistack/centos-9-stream"
     runs-on: ubuntu-22.04
     container:
-      image: ${{ matrix.image }}
+      image: ${{ env.IMAGE }}
     steps:
-      - name: Install libs on CentOS
-        if: startsWith(matrix.image, 'centos')
-        run: |
-          yum update -y && yum install -y epel-release && yum install -y gcc make cmake3 gcc-c++ openssl-devel gzip rpmlint
-          ln -s /usr/bin/cmake3 /usr/bin/cmake
-
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+
+      - name: Get Rust toolchain channel
+        run: |
+          echo "RUST_CHANNEL=$(sed -nrE 's/^channel = "(.*)"$/\1/p' "$GITHUB_WORKSPACE"/rust-toolchain.toml)" >> $GITHUB_ENV
 
       - name: Install Rust ${{ env.RUST_CHANNEL }}
         uses: dtolnay/rust-toolchain@888c2e1ea69ab0d4330cbf0af1ecc7b68f368cc1 # v1
@@ -100,14 +94,14 @@ jobs:
 
       - name: Verify package
         run: |
-          # do not use exit codes while errors occured
+          # do not use exit codes when errors occurred
           rpmlint target/generate-rpm/akr-*.rpm || true
 
       - name: Upload rpm asset to release
         if: ${{ github.event.release.upload_url }}
         env:
           GH_TOKEN: ${{ github.token }}
-          IMAGE: ${{ matrix.image == 'alvistack/centos-9-stream' && 'centos-9-stream' || 'unknown' }}
+          IMAGE: 'centos-9-stream'
           VERSION: ${{ github.event.release.tag_name }}
         run: |
           cp target/generate-rpm/akr-$VERSION-1.x86_64.rpm akr_$VERSION-$IMAGE.rpm
